# whisper.cpp

./: .dockerignore  .gitattributes  .gitignore  AGENTS.md  AUTHORS  CLAUDE.md  CMakeLists.txt  CONTRIBUTING.md  HowToRUNWSS-Server.md  IMPLEMENTATION_SUMMARY.md  Makefile  PR_DESCRIPTION.md  README.md  README_INTENT_CLASSIFIER.md  README_old.md  README_sycl.md  STREAM_COMPILE.md  STREAM_RUN.md  THREAD_HANDOFF_2026-03-08.md  build-xcframework.sh  build_mic.sh  compile.txt  doubao.cpp  doubao_gpu.cpp  doubao_mic.cpp  download.txt  minimal_mic.cpp  run.txt  siri_remote_whisper_socket.py  whisper "319 Lac Cypriere Dr.m4a" --model base  whisper.command  ws_client.py
.devcontainer/: devcontainer.json
.devops/: cublas.Dockerfile  main-cuda.Dockerfile  main-intel.Dockerfile  main-musa.Dockerfile  main-vulkan.Dockerfile  main.Dockerfile
.github/workflows/: bindings-go.yml  bindings-ruby.yml  build-clang.yml  build-coreml.yml  build-cpu.yml  build-gcc.yml  build-linux.yml  build-macos.yml  build-quantize.yml  build-sanitize.yml  build-windows.yml  build.yml  coreml.yml  docker.yml  examples-wasm.yml  examples.yml  linux-cpu-build.yml  linux-vulkan-build.yml  quantize.yml  release.yml  ryzen-ai-minimal.yml  ryzenai-minimal-build.yml  sync.yml  test-whisper.yml  vad.yml
benchmark/: README.md  bench.sh  parse_results.py
benchmark/audio/: README.md  lock.json
benchmark/references/: README.md
benchmark/results/: 20260309_isolation_summary.md
bindings/go/: .gitignore  Makefile  README.md  context_params.go  doc.go  go.mod  go.sum  params.go  whisper.go  whisper_test.go
bindings/java/: README.md
bindings/javascript/: README.md  emscripten.cpp  libwhisper.worker.js  package.json  whisper.js
bindings/node.js/: .gitignore  README.md  package-lock.json  package.json  whisper.js
bindings/ruby/: .gitignore  README.md  Rakefile  extsources.rb  whispercpp.gemspec
ci/: README.md  resolve-rocm-version.sh  run.sh
cmake/: git-vars.cmake  parakeet.pc.in  whisper-config.cmake.in  whisper.pc.in
examples/: CMakeLists.txt  common-ggml.cpp  common-sdl.cpp  common-sdl.h  common-whisper.cpp  common-whisper.h  common.cpp  common.h  compat_win.h  doubao_mic.cpp  ffmpeg-transcode.cpp  generate-karaoke.sh  grammar-parser.cpp  grammar-parser.h  hf-cache.cpp  hf-cache.h  http.h  livestream.sh  server-common.cpp  server-common.h  server.py  stb_vorbis.c  twitch.sh  whisper-memory-profiler.h  yt-wsp.sh
examples/WhisperSpotlight/: GlobalHotkey.swift  ModelManager.swift  OverlayView.swift  Package.swift  Recorder.swift  WhisperSpotlightApp.swift
examples/addon.node/: CMakeLists.txt  README.md  addon.cpp  index.js  (+2 more)
examples/cli/: CMakeLists.txt  README.md  cli.cpp  win32.manifest
examples/mcp/: CMakeLists.txt  README.md  mcp-demo.cpp  mcp-handler.cpp  mcp-handler.hpp  mcp-params.hpp  mcp-server.cpp  mcp-transport.hpp  stdio-client.cpp  stdio-client.hpp  stdio-transport.cpp  stdio-transport.hpp  test-server.sh
examples/mic/: CMakeLists.txt  README.md  whisper-mic.cpp
examples/parakeet-server/: CMakeLists.txt  parakeet-server.cpp
examples/stream/: CMakeLists.txt  README.md  server.cpp  stream.cpp
examples/stream.node/: CMakeLists.txt  addon.cpp  addon.h  index.js  package.json  whisper-stream.cpp  whisper-stream.h
examples/stream_socket/: CMakeLists.txt  stream_socket.cpp
examples/whisper.gui/: CMakeLists.txt  README.md  diarization.cpp  diarization.h  diarize.py  download-diarization-models.sh  file_browser.h  launcher.cpp  main.cpp  neural_diarize.cpp  neural_diarize.h  whisper-gui-airgap.ps1  whisper-gui-airgap.sh
ggml/: .gitignore  CMakeLists.txt
grammars/: assistant.gbnf  chess.gbnf  colors.gbnf
include/: parakeet.h  whisper-speaker.h  whisper.h
js-tests/: fen-redos.spec.js  package.json
models/: README.md  convert-h5-to-coreml.py  convert-h5-to-ggml.py  convert-parakeet-to-ggml.py  convert-pt-to-ggml.py  convert-silero-vad-to-ggml.py  convert-speaker-to-ggml.py  convert-whisper-to-coreml.py  convert-whisper-to-openvino.py  download-coreml-model.sh  download-ggml-model.cmd  download-ggml-model.sh  download-vad-model.cmd  download-vad-model.sh  gen-test-models.py  generate-coreml-interface.sh  generate-coreml-model.sh  generate-parakeet-test-model.py  requirements-coreml.txt
parakeet-cpp/: .gitignore  CMakeLists.txt  PROGRESS.md  README.md
rs-hf-tokenizer/: Cargo.toml  README.md  build_android.bat  copy_libs.bat
rs-hf-tokenizer/.cargo/: config.toml
rs-hf-tokenizer/src/: lib.rs
samples/: .gitignore
scripts/: bench-all-gg.txt  bench-all.sh  bench-wts.sh  bench.py  build-info.sh  convert-all.sh  deploy-wasm.sh  local-build.ps1  quantize-all.sh  sync-ggml-am.sh  sync-ggml.last  sync-ggml.sh  sync-llama.sh  upload-parakeet.py
src/: CMakeLists - Copy.txt  CMakeLists.txt  parakeet-arch.h  parakeet.cpp  whisper-arch.h  whisper-diarize.cpp  whisper-diarize.h  whisper-flat.cpp  whisper-flat.h  whisper-logits-slice.h  whisper-speaker.cpp  whisper.cpp  whisper.cpp.old
src/aneforge/: whisper-aneforge.cpp  whisper-aneforge.h
src/coreml/: MLModel+Compat.m  whisper-decoder-impl.m  whisper-decoder.h  whisper-decoder.mm  whisper-encoder-impl.m
src/vitisai/: whisper-vitisai-encoder.cpp  whisper-vitisai-encoder.h
tests/: CMakeLists.txt  run-tests.sh  test-c.c  test-hf-resolve.sh  test-lang-auto-detect.cpp  test-log-mel-oob.cpp  test-mcp.cpp  test-model-load.cpp  test-parakeet-full.cpp  test-parakeet-stream.cpp  test-read-audio-data-buffer.cpp  test-stream-pcm.cpp  test-vad-full.cpp  test-vad-streaming.cpp  test-vad.cpp  test-whisper-logits-slice.cpp  test-whisper.js
tests/earnings21/: README.md  eval.py
tests/librispeech/: .gitignore  Makefile  README.md  eval.mk  eval.py  requirements.txt
tests/librispeech-parakeet/: eval.mk
tests/librispeech/normalizers/: LICENSE
tts-cpp/: .gitignore  CMakeLists.txt  MEMORY.md  NOTICE  PLAN_SUPERTONIC_OPENCL.md  PROGRESS_SUPERTONIC.md  README.md  vcpkg-configuration.json  vcpkg.json
voice_assistant/: README.md  app.py  conversation.txt  main.py  requirements.txt
whisper-transcribe/: SKILL.md
whisper_skill/: SKILL.md
(+902 files in other folders)
