[package]
name = "HF-Tokenizers-Intent-Classifier"
version = "0.1.0"
edition = "2021"

[dependencies]
tokenizers = { version = "0.19.1", default-features = false, features = ["onig"] }
jni = { version = "0.21.1" }
serde = { version = "1.0" , features = ["derive"] }
serde_json = "1.0"

[lib]
name = "hftokenizer"
crate-type = ["cdylib"]